# filosofo

./: .gitignore  README.md  pyproject.toml
scripts/email_comparator/: main.py
scripts/irmas_checker/: main.py
