[project]
name = "filosofo"
version = "0.1.0"
description = "Repositório de scripts Python independentes"
requires-python = ">=3.13"

[tool.uv]
dev-dependencies = [
    "ruff",
    "pandas",
    "pandas-stubs",
    "openpyxl",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
